@@ -124,6 +124,7 @@ Verilator 5.043 devel
 * Fix JSON missing `signed` indication (#6845).
 * Fix class reference throwing cannot detect changes error (#6851).
 * Fix `randc` on extended class (#6852).
+* Fix typedef `::` class reference error (#6862).
 
 
 Verilator 5.042 2025-11-02
